created user page

--- a/src/main/resources/static/CSS/fyp_css.css
+++ b/src/main/resources/static/CSS/fyp_css.css
@@ -5,12 +5,13 @@
 }
 
 body {
+    background-color: whitesmoke;
     font-family: Arial, sans-serif;
     margin-left: 60px;
 }
 
 /* Hamburger Menu Button */
-.hamburger-menu {
+.hamburger-menu-sm {
     position: fixed;
     top: 20px;
     left: 20px;
