added piyus's pages

--- a/src/main/resources/templates/fyp.html
+++ b/src/main/resources/templates/fyp.html
@@ -32,13 +32,13 @@
 
 
     <div class="navbar">
-        <a class="logo" href="main.html"><b>Echobeat</b></a>
+        <a class="logo" href="/fyp"><b>Echobeat</b></a>
         <button class="hamburger-menu blocky">&nbsp;&nbsp;=&nbsp;&nbsp;</button>
         <div class="navlinks">
             <a class="link" href="blogs.html">Blogs</a>
             <a class="link" href="topics.html">Topics</a>
-            <a class="link" href="about.html">About Us</a>
-            <a class="link blocky" href="login.html">Login</a>
+            <a class="link" href="/charts">Charts</a>
+            <a class="link blocky" href="/login">Login</a>
         </div>
     </div>
 
