--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -16,8 +16,8 @@
     <div class="navlinks">
         <a class="link" href="blogs.html">Blogs</a>
         <a class="link" href="topics.html">Topics</a>
-        <a class="link" href="about.html">About Us</a>
-        <a class="link blocky" href="login.html">Login</a>
+        <a class="link" href="/charts">Charts</a>
+        <a class="link blocky" href="/login">Login</a>
     </div>
 </div>
 <script th:src="@{/JavaScript/navbar.js}"></script>
@@ -26,7 +26,7 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-pic">
-                <img src="profile-pic.jpg" alt="User Picture">
+                <img src="https://avatars.githubusercontent.com/u/118014773?v=4" alt="User Picture">
             </div>
             <div class="profile-info">
                 <h1 th:text="${user.firstName} + ' ' + ${user.lastName}"></h1>
