--- a/src/main/resources/static/CSS/navbar.css
+++ b/src/main/resources/static/CSS/navbar.css
@@ -11,6 +11,7 @@
     background-color: var(--color-200);
     margin-top: 10px;
     border-radius: 5px;
+    z-index: 1;
     /* overflow: hidden; */
 }
 
