--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -10,17 +10,7 @@
 </head>
 <body>
 
-<div class="navbar">
-    <a class="logo" href="main.html"><b>Echobeat</b></a>
-    <button class="hamburger-menu blocky">&nbsp;&nbsp;=&nbsp;&nbsp;</button>
-    <div class="navlinks">
-        <a class="link" href="blogs.html">Blogs</a>
-        <a class="link" href="topics.html">Topics</a>
-        <a class="link" href="/charts">Charts</a>
-        <a class="link blocky" href="/login">Login</a>
-    </div>
-</div>
-<script th:src="@{/JavaScript/navbar.js}"></script>
+    <div th:replace="fragments/navbar :: navbar"></div>
 
 <div th:each="user : ${user}">
     <div class="profile-container">
