--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -13,16 +13,7 @@
 
 <body>
 
-    <div class="navbar">
-        <a class="logo" href="/fyp"><b>Echobeat</b></a>
-        <button class="hamburger-menu blocky">&nbsp;&nbsp;=&nbsp;&nbsp;</button>
-        <div class="navlinks">
-            <a class="link" href="blogs.html">Blogs</a>
-            <a class="link" href="topics.html">Topics</a>
-            <a class="link" href="/charts">Charts</a>
-            <a class="link blocky" href="/login">Login</a>
-        </div>
-    </div>
+    <div th:replace="fragments/navbar :: navbar"></div>
 
 
     <section class="profile-section">
