--- a/src/main/resources/templates/charts.html
+++ b/src/main/resources/templates/charts.html
@@ -12,7 +12,7 @@
     <div th:replace="fragments/navbar :: navbar"></div>
     <div class="charts-container">
         <h1>Top Charts</h1>
-        <div th:each="chart : ${charts}" class="card" th:onclick="'window.location.href=\'http://localhost:6969' + @{/chart/{id}(id=${chart.get('chart_id')})}">
+        <div th:each="chart : ${charts}" class="card" th:onclick="'window.location.href=\'' + @{/chart?id={id}(id=${chart.get('chart_id')})} + '\''">
             <b><div th:text="${'chart name: '+chart.get('chart_type')}"></div></b>
         </div>
     </div>
