--- a/src/main/resources/templates/chart.html
+++ b/src/main/resources/templates/chart.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top 50 Global Songs</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" th:href="@{/CSS/chart_styles.css}">
+    <link rel="stylesheet" th:href="@{/CSS/colors.css}">
+    <link rel="stylesheet" th:href="@{/CSS/navbar.css}">
 </head>
 <body>
+    <div th:replace="fragments/navbar :: navbar"></div>
     <div class="song-list-container">
-        <h1>Top 50 Global Songs</h1>
-        <ul id="songList">
-            <!-- Placeholder for songs -->
-            <li onclick="window.location.href='player.html?songId=1'">1. Song Title 1 - Artist 1</li>
-            <li onclick="window.location.href='player.html?songId=2'">2. Song Title 2 - Artist 2</li>
-            <li onclick="window.location.href='player.html?songId=3'">3. Song Title 3 - Artist 3</li>
-            <!-- Repeat for all 50 songs -->
+        <h1><div th:text="${chartName.get('chart_type')}"></div></h1>
+        <ul th:each="song : ${Chartsongs}">
+            <li onclick="window.location.href='player.html?songId=1'"><div th:text="${song.get('track_name')}"></div></li>
         </ul>
     </div>
 </body>
