--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -7,8 +7,8 @@
     <title>Artist</title>
     <link rel="stylesheet" th:href="@{/CSS/artist_styles.css}">
     <link rel="stylesheet" th:href="@{/CSS/style.css}">
-    <link rel="stylesheet" th:href="@{/CSS/colors.css}">
-    <link rel="stylesheet" th:href="@{/CSS/navbar.css}">
+    <!-- <link rel="stylesheet" th:href="@{/CSS/colors.css}">
+    <link rel="stylesheet" th:href="@{/CSS/navbar.css}"> -->
 </head>
 
 <body>
@@ -45,21 +45,6 @@
     <section class="about-section" id="overview">
         <h3  th:text="'About '+ ${artist.get('first_name')}"></h3>
         <div class="about-container" th:text="${artist.get('about')}">
-            <!-- <p>
-                fireheart17 took over pop music & culture on his own terms filtering R&B, Pop,& hip-hop through an ambitious widescreen lens. The multi-platinum 3X GRAMMY Award winner has emerged as one of the most successful & significant artists of the modern era.
-            </p>
-            <p>
-                Born and raised in Jaipur, fireheart17 began his music career in small local clubs before gaining
-                international fame.
-                He continues to tour worldwide, bringing his music to fans in sold-out arenas and intimate venues alike.
-            </p>
-            <p>
-                In addition to his music, fireheart17 is a passionate advocate for mental health awareness, regularly
-                supporting
-                causes that aim to make mental health care more accessible to all. His dedication to both his art and
-                his
-                activism has earned him numerous accolades and a loyal fan base. His album "savage fireheart17" held the #1 spot on Billboard 200 for 4 consecutive weeks, marking his 4th #1 album & becoming the first to ever rank #1 on the Billboard 200, Hot 100, and Artist 100 simultaneously.
-            </p> -->
         </div>
     </section>
 
